--- a/package.json
+++ b/package.json
@@ -7,20 +7,31 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy:backend": "aws cloudformation deploy --template-file cloudformation.yaml --stack-name qpms-backend --capabilities CAPABILITY_IAM --parameter-overrides Environment=dev"
   },
   "dependencies": {
+    "@aws-amplify/auth": "^5.5.5",
+    "@aws-amplify/core": "^5.5.5",
+    "@aws-sdk/client-cognito-identity-provider": "^3.370.0",
+    "@aws-sdk/client-dynamodb": "^3.370.0",
+    "@aws-sdk/client-s3": "^3.370.0",
+    "@aws-sdk/lib-dynamodb": "^3.370.0",
     "@supabase/supabase-js": "^2.39.3",
+    "aws-amplify": "^5.3.10",
+    "framer-motion": "^11.0.3",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.49.3",
     "react-router-dom": "^6.22.1",
     "react-toastify": "^10.0.4",
-    "framer-motion": "^11.0.3",
-    "react-hook-form": "^7.49.3",
-    "js-cookie": "^3.0.5"
+    "typescript": "^5.3.3",
+    "vite": "^5.1.4"
   },
   "devDependencies": {
+    "@aws-sdk/types": "^3.370.0",
     "@eslint/js": "^9.9.1",
     "@types/js-cookie": "^3.0.6",
     "@types/react": "^18.3.5",
@@ -30,3 +41,9 @@
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
+    "globals": "^15.0.0",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
+    "typescript-eslint": "^7.0.0"
+  }
+}
