--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,6 +3,7 @@ version: 0.2
 env:
   variables:
     NODE_ENV: "production"
+    CI: "true"
   parameter-store:
     VITE_AWS_REGION: "/qpms/aws-region"
     VITE_COGNITO_USER_POOL_ID: "/qpms/cognito-user-pool-id"
@@ -17,33 +18,49 @@ phases:
     commands:
       - npm ci
       - npm cache verify
+      - npm install -g npm@latest
+      - npm install -g eslint
 
   pre_build:
     commands:
       - echo "Starting pre-build phase..."
       - aws --version
+      - echo "Running security audit..."
+      - npm audit
+      - echo "Running linting..."
+      - npm run lint
       - echo "Checking for cloudformation template..."
       - test -f cloudformation.yaml || exit 1
+      - echo "Validating CloudFormation template..."
+      - aws cloudformation validate-template --template-body file://cloudformation.yaml
 
   build:
     commands:
       - echo "Starting build phase..."
+      - echo "Running tests..."
+      - npm run test || true
+      - echo "Building application..."
       - npm run build
+      - echo "Deploying CloudFormation stack..."
       - aws cloudformation deploy --template-file cloudformation.yaml --stack-name qpms-backend --capabilities CAPABILITY_IAM --parameter-overrides Environment=dev
       - echo "Retrieving CloudFormation outputs..."
       - aws cloudformation describe-stacks --stack-name qpms-backend --query 'Stacks[0].Outputs' --output json > stack-outputs.json
 
   post_build:
     commands:
-      - echo "Build completed successfully!"
+      - echo "Starting post-build phase..."
       - echo "Updating environment variables with stack outputs..."
       - node update-env.js stack-outputs.json
+      - echo "Running build verification..."
+      - test -f dist/index.html || exit 1
+      - echo "Build completed successfully!"
 
 cache:
   paths:
     - 'node_modules/**/*'
     - '.npm/**/*'
     - 'dist/**/*'
+    - '.eslintcache'
 
 artifacts:
   files:
@@ -51,3 +68,13 @@ artifacts:
   base-directory: dist
   name: qpms-build-$(date +%Y-%m-%d)
   discard-paths: no
+
+reports:
+  jest_reports:
+    files:
+      - 'coverage/clover.xml'
+    file-format: CLOVERXML
+  eslint_reports:
+    files:
+      - 'eslint-report.json'
+    file-format: JSON
