--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-file eslint-report.json",
     "preview": "vite preview",
+    "test": "vitest run --coverage",
     "deploy:backend": "aws cloudformation deploy --template-file cloudformation.yaml --stack-name qpms-backend --capabilities CAPABILITY_IAM --parameter-overrides Environment=dev"
   },
   "dependencies": {
@@ -37,6 +38,7 @@
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "@vitest/coverage-c8": "^0.33.0",
     "autoprefixer": "^10.4.18",
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
@@ -44,6 +46,7 @@
     "globals": "^15.0.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "typescript-eslint": "^7.0.0"
+    "typescript-eslint": "^7.0.0",
+    "vitest": "^0.34.6"
   }
 }
