--- a/package.json
+++ b/package.json
@@ -12,14 +12,8 @@
     "deploy:backend": "aws cloudformation deploy --template-file cloudformation.yaml --stack-name qpms-backend --capabilities CAPABILITY_IAM --parameter-overrides Environment=dev"
   },
   "dependencies": {
-    "@aws-amplify/auth": "^5.5.5",
-    "@aws-amplify/core": "^5.5.5",
-    "@aws-sdk/client-cognito-identity-provider": "^3.370.0",
-    "@aws-sdk/client-dynamodb": "^3.370.0",
-    "@aws-sdk/client-s3": "^3.370.0",
-    "@aws-sdk/lib-dynamodb": "^3.370.0",
-    "@supabase/supabase-js": "^2.39.3",
-    "aws-amplify": "^5.3.10",
+    "@aws-amplify/ui-react": "^6.0.7",
+    "aws-amplify": "^6.0.12",
     "framer-motion": "^11.0.3",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.344.0",
