--- a/amplify.yml
+++ b/amplify.yml
@@ -1,59 +1,49 @@
-version: 0.2
-
-phases:
-  install:
-    runtime-versions:
-      nodejs: 18
-    commands:
-      - npm ci
-      - npm cache verify
-      - npm install -g npm@latest
-      - npm install -g eslint
-
-  pre_build:
-    commands:
-      - echo "Starting pre-build phase..."
-      - aws --version
-      - echo "Running security audit..."
-      - npm audit
-      - echo "Running linting..."
-      - npm run lint
-
-  build:
-    commands:
-      - echo "Starting build phase..."
-      - echo "Running tests..."
-      - npm run test || true
-      - echo "Building application..."
-      - npm run build
-
-  post_build:
-    commands:
-      - echo "Starting post-build phase..."
-      - echo "Running build verification..."
-      - test -f dist/index.html || exit 1
-      - echo "Build completed successfully!"
-
-cache:
-  paths:
-    - 'node_modules/**/*'
-    - '.npm/**/*'
-    - 'dist/**/*'
-    - '.eslintcache'
-
-artifacts:
-  files:
-    - '**/*'
-  base-directory: dist
-  name: qpms-build-$(date +%Y-%m-%d)
-  discard-paths: no
-
+version: 1
+frontend:
+  phases:
+    preBuild:
+      commands:
+        - echo "Installing dependencies..."
+        - npm ci
+        - npm cache verify
+        - npm install -g npm@latest
+        - npm install -g eslint
+        - echo "Starting pre-build phase..."
+        - aws --version
+        - echo "Running security audit..."
+        - npm audit
+        - echo "Running linting..."
+        - npm run lint
+    build:
+      commands:
+        - echo "Starting build phase..."
+        - echo "Running tests..."
+        - npm run test || true
+        - echo "Building application..."
+        - npm run build
+    postBuild:
+      commands:
+        - echo "Starting post-build phase..."
+        - echo "Running build verification..."
+        - test -f dist/index.html || exit 1
+        - echo "Build completed successfully!"
+  artifacts:
+    baseDirectory: dist
+    files:
+      - '**/*'
+    discardPaths: false
+  cache:
+    paths:
+      - node_modules/**/*
+      - .npm/**/*
+      - dist/**/*
+      - .eslintcache
 reports:
   jest_reports:
     files:
-      - 'coverage/clover.xml'
+      - coverage/clover.xml
     file-format: CLOVERXML
   eslint_reports:
     files:
-      - 'eslint-report.json'
+      - eslint-report.json
     file-format: JSON
