--- a/amplify.yml
+++ b/amplify.yml
@@ -3,30 +3,29 @@ frontend:
   phases:
     preBuild:
       commands:
-        - echo "Installing dependencies..."
-        - npm ci
+        - echo "Installing dependencies with legacy peer deps…"
+        - npm ci --legacy-peer-deps
         - npm cache verify
+        - echo "Upgrading npm & installing global tools…"
         - npm install -g npm@latest
         - npm install -g eslint
-        - echo "Starting pre-build phase..."
+        - echo "Verifying AWS CLI…"
         - aws --version
-        - echo "Running security audit..."
+        - echo "Running security audit…"
         - npm audit
-        - echo "Running linting..."
+        - echo "Running linting…"
         - npm run lint
     build:
       commands:
-        - echo "Starting build phase..."
-        - echo "Running tests..."
+        - echo "Running tests (non-blocking)…"
         - npm run test || true
-        - echo "Building application..."
+        - echo "Building application…"
         - npm run build
     postBuild:
       commands:
-        - echo "Starting post-build phase..."
-        - echo "Running build verification..."
+        - echo "Verifying build output…"
         - test -f dist/index.html || exit 1
-        - echo "Build completed successfully!"
+        - echo "✅ Build completed successfully!"
   artifacts:
     baseDirectory: dist
     files:
