--- a/amplify.yml
+++ b/amplify.yml
@@ -1,48 +1,44 @@
 version: 1
-frontend:
-  phases:
-    preBuild:
-      commands:
-        - echo "Installing dependencies with legacy peer deps…"
-        - npm ci --legacy-peer-deps
-        - npm cache verify
-        - echo "Upgrading npm & installing global tools…"
-        - npm install -g npm@latest
-        - npm install -g eslint
-        - echo "Verifying AWS CLI…"
-        - aws --version
-        - echo "Running security audit…"
-        - npm audit
-        - echo "Running linting…"
-        - npm run lint
-    build:
-      commands:
-        - echo "Running tests (non-blocking)…"
-        - npm run test || true
-        - echo "Building application…"
-        - npm run build
-    postBuild:
-      commands:
-        - echo "Verifying build output…"
-        - test -f dist/index.html || exit 1
-        - echo "✅ Build completed successfully!"
-  artifacts:
-    baseDirectory: dist
-    files:
-      - '**/*'
-    discardPaths: false
-  cache:
-    paths:
-      - node_modules/**/*
-      - .npm/**/*
-      - dist/**/*
-      - .eslintcache
-reports:
-  jest_reports:
-    files:
-      - coverage/clover.xml
-    file-format: CLOVERXML
-  eslint_reports:
-    files:
-      - eslint-report.json
-    file-format: JSON
+
+applications:
+  - frontend:
+      phases:
+        preBuild:
+          commands:
+            - npm ci
+            - npm cache verify
+            - npm install -g npm@latest
+            - npm install -g eslint
+            - echo "Running security audit..."
+            - npm audit
+            - echo "Running linting..."
+            - npm run lint
+        build:
+          commands:
+            - echo "Running tests..."
+            - npm run test || true
+            - echo "Building application..."
+            - npm run build
+      artifacts:
+        baseDirectory: dist
+        files:
+          - '**/*'
+      cache:
+        paths:
+          - 'node_modules/**/*'
+          - '.npm/**/*'
+          - '.eslintcache'
+      test:
+        phases:
+          test:
+            commands:
+              - npm run test
+        reports:
+          jest_reports:
+            files:
+              - 'coverage/clover.xml'
+            file-format: CLOVERXML
+          eslint_reports:
+            files:
+              - 'eslint-report.json'
+            file-format: JSON
