--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-file eslint-report.json",
     "preview": "vite preview",
-    "test": "vitest run --coverage",
-    "deploy:backend": "aws cloudformation deploy --template-file cloudformation.yaml --stack-name qpms-backend --capabilities CAPABILITY_IAM --parameter-overrides Environment=dev"
+    "test": "vitest run --coverage"
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^6.0.7",
-    "aws-amplify": "^6.0.12",
+    "@aws-amplify/auth": "^6.0.12",
+    "@aws-amplify/core": "^6.0.12",
+    "@aws-amplify/storage": "^6.0.12",
     "framer-motion": "^11.0.3",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.344.0",
