--- a/amplify.yml
+++ b/amplify.yml
@@ -5,7 +5,7 @@ applications:
       phases:
         preBuild:
           commands:
-            - npm ci
+            - npm ci --legacy-peer-deps
             - npm cache verify
             - npm install -g npm@latest
             - npm install -g eslint
