--- a/package.json
+++ b/package.json
@@ -28,20 +28,21 @@
   },
   "devDependencies": {
     "@aws-sdk/types": "^3.370.0",
-    "@eslint/js": "^9.9.1",
+    "@eslint/js": "^8.56.0",
     "@types/js-cookie": "^3.0.6",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "@vitest/coverage-c8": "^0.33.0",
     "autoprefixer": "^10.4.18",
-    "eslint": "^9.9.1",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+    "eslint": "^8.56.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.11",
     "globals": "^15.0.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "typescript-eslint": "^7.0.0",
+    "@typescript-eslint/eslint-plugin": "^7.0.0",
+    "@typescript-eslint/parser": "^7.0.0",
     "vitest": "^0.34.6"
   }
 }
