--- a/package.json
+++ b/package.json
@@ -41,8 +41,10 @@
     "globals": "15.0.0",
     "postcss": "8.4.35",
     "tailwindcss": "3.4.1",
-    "@typescript-eslint/eslint-plugin": "7.0.0",
-    "@typescript-eslint/parser": "7.0.0",
+    "@typescript-eslint/eslint-plugin": "6.21.0",
+    "@typescript-eslint/parser": "6.21.0",
+    // "@typescript-eslint/eslint-plugin": "7.0.0",
+    // "@typescript-eslint/parser": "7.0.0",
     "vitest": "0.34.6"
   },
   "resolutions": {
