--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-file eslint-report.json",
+    "lint": "eslint . --report-file eslint-report.json",
     "preview": "vite preview",
     "test": "vitest run --coverage"
   },
