--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -20,6 +20,14 @@
       "noUnusedParameters": true,
       "noFallthroughCasesInSwitch": true
     },
-    "include": ["src"]
+    "include": ["src/**/*.ts",
+    "src/**/*.tsx",
+    "vite.config.ts"
+  ],
+    "exclude": [
+    "node_modules",
+    "dist",
+    "lambda"  // Exclude lambda files as they have their own config
+  ]
   }
   
